--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>Popup</title>
+    <!-- CSS -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="content">Loading...</div>
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
 </body>
 </html>
