--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Popup</title>
     <!-- CSS -->
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div id="content">Loading...</div>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h1>AI Answer</h1>
+      </nav>
+    </header>
+
+    <main>
+      <button type="button" id="autoFill">Auto Fill</button>
+    </main>
     <script type="module" src="popup.js"></script>
-</body>
+  </body>
 </html>
